; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sjson.c_push_number.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sjson.c_push_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.jsonsl_state_st = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, %struct.jsonsl_state_st*)* @push_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_number(%struct.TYPE_4__* %0, %struct.jsonsl_state_st* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.jsonsl_state_st*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store %struct.jsonsl_state_st* %1, %struct.jsonsl_state_st** %4, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = load %struct.jsonsl_state_st*, %struct.jsonsl_state_st** %4, align 8
  %11 = call i32 @get_state_buffer(%struct.TYPE_4__* %9, %struct.jsonsl_state_st* %10)
  %12 = load %struct.jsonsl_state_st*, %struct.jsonsl_state_st** %4, align 8
  %13 = getelementptr inbounds %struct.jsonsl_state_st, %struct.jsonsl_state_st* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.jsonsl_state_st*, %struct.jsonsl_state_st** %4, align 8
  %16 = getelementptr inbounds %struct.jsonsl_state_st, %struct.jsonsl_state_st* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = sub nsw i64 %14, %17
  %19 = call i32 @lua_pushlstring(i32 %8, i32 %11, i64 %18)
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @lua_tonumber(i32 %22, i32 -1)
  store i32 %23, i32* %5, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @lua_pop(i32 %26, i32 1)
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @lua_pushnumber(i32 %30, i32 %31)
  ret void
}

declare dso_local i32 @lua_pushlstring(i32, i32, i64) #1

declare dso_local i32 @get_state_buffer(%struct.TYPE_4__*, %struct.jsonsl_state_st*) #1

declare dso_local i32 @lua_tonumber(i32, i32) #1

declare dso_local i32 @lua_pop(i32, i32) #1

declare dso_local i32 @lua_pushnumber(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
